// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentCard Should handle resizing a framed component. 1`] = `
<ComponentCard
  componentName="Let's"
  frameHeight={0}
  frameWidth={0}
  headerHeight={32}
  height="525px"
  iconSrc="assets/icons/spring-icon.png"
  isFramedComponent={true}
  isFullPage={false}
  menuItems={Array []}
  padding={0}
  showSettings={false}
  width="525px"
>
  <Card
    centered={true}
    className="bioblocks-component-card"
    style={
      Object {
        "height": "525px",
        "maxWidth": "unset",
        "padding": "0 0 5px 5px",
        "width": "525px",
      }
    }
  >
    <div
      className="ui centered card bioblocks-component-card"
      onClick={[Function]}
      style={
        Object {
          "height": "525px",
          "maxWidth": "unset",
          "padding": "0 0 5px 5px",
          "width": "525px",
        }
      }
    >
      <ComponentMenuBar
        componentName="Let's"
        configurations={Array []}
        height={32}
        iconSrc="assets/icons/spring-icon.png"
        isExpanded={false}
        menuItems={Array []}
        onExpandToggleCb={[Function]}
        width="100%"
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <Menu
            secondary={true}
            style={
              Object {
                "height": 32,
                "margin": 0,
              }
            }
          >
            <div
              className="ui secondary menu"
              style={
                Object {
                  "height": 32,
                  "margin": 0,
                }
              }
            >
              <MenuItem
                fitted="horizontally"
                position="left"
                style={
                  Object {
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                <div
                  className="left horizontally fitted item"
                  onClick={[Function]}
                  style={
                    Object {
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <img
                    alt="component icon"
                    src="assets/icons/spring-icon.png"
                    style={
                      Object {
                        "height": "32px",
                        "padding": "2px",
                        "width": "32px",
                      }
                    }
                  />
                  Let's
                </div>
              </MenuItem>
              <Menu
                floated="right"
                secondary={true}
              >
                <div
                  className="ui secondary right floated menu"
                >
                  <MenuItem
                    fitted="horizontally"
                    style={
                      Object {
                        "flexDirection": "column",
                      }
                    }
                  >
                    <div
                      className="horizontally fitted item"
                      onClick={[Function]}
                      style={
                        Object {
                          "flexDirection": "column",
                        }
                      }
                    >
                      <Icon
                        as="i"
                        name="expand arrows alternate"
                        onClick={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="expand arrows alternate icon"
                          onClick={[Function]}
                        />
                      </Icon>
                      <span
                        style={
                          Object {
                            "fontSize": "11px",
                            "visibility": "hidden",
                          }
                        }
                      >
                        Expand
                      </span>
                    </div>
                  </MenuItem>
                </div>
              </Menu>
            </div>
          </Menu>
        </div>
      </ComponentMenuBar>
      <div
        style={
          Object {
            "transform": "scale(calc(515/0),calc((507 - 32)/0))",
            "transformOrigin": "top left",
          }
        }
      >
        <div>
          Go!
        </div>
      </div>
    </div>
  </Card>
</ComponentCard>
`;

exports[`ComponentCard Should match existing snapshot when framed. 1`] = `
<Card
  centered={true}
  className="bioblocks-component-card"
  style={
    Object {
      "height": "525px",
      "maxWidth": "unset",
      "padding": "0 0 5px 5px",
      "width": "525px",
    }
  }
>
  <ComponentMenuBar
    componentName="The Boxer"
    configurations={Array []}
    height={32}
    iconSrc="assets/icons/spring-icon.png"
    isExpanded={false}
    menuItems={Array []}
    onExpandToggleCb={[Function]}
    width="100%"
  />
  <div
    style={
      Object {
        "transformOrigin": "top left",
      }
    }
  />
</Card>
`;

exports[`ComponentCard Should match existing snapshot when given default props. 1`] = `
<Card
  centered={true}
  className="bioblocks-component-card"
  style={
    Object {
      "height": "525px",
      "maxWidth": "unset",
      "padding": "0 0 5px 5px",
      "width": "525px",
    }
  }
>
  <ComponentMenuBar
    componentName="The Boxer"
    configurations={Array []}
    height={32}
    iconSrc="assets/icons/spring-icon.png"
    isExpanded={false}
    menuItems={Array []}
    onExpandToggleCb={[Function]}
    width="100%"
  />
</Card>
`;

exports[`ComponentCard Should match existing snapshot when not framed. 1`] = `
<Card
  centered={true}
  className="bioblocks-component-card"
  style={
    Object {
      "height": "525px",
      "maxWidth": "unset",
      "padding": "0 0 5px 5px",
      "width": "525px",
    }
  }
>
  <ComponentMenuBar
    componentName="The Boxer"
    configurations={Array []}
    height={32}
    iconSrc="assets/icons/spring-icon.png"
    isExpanded={false}
    menuItems={Array []}
    onExpandToggleCb={[Function]}
    width="100%"
  />
</Card>
`;
